--- a/workflows/docker-hub-publish-with-release.yml
+++ b/workflows/docker-hub-publish-with-release.yml
@@ -5,7 +5,8 @@ name: Docker Publish
 
 on:
   release:
-    types: [published]
+    types:
+      - published
 
 env:
   IMAGE_NAME: ${{ github.repository }}
