--- a/workflows/docker-multi.yml
+++ b/workflows/docker-multi.yml
@@ -1,21 +1,38 @@
-# GitHub Packages に Docker image を公開する。（Release イベント駆動）
+# 任意のレジストリに複数の Docker image を公開orビルドする。
+# master/mainのプッシュ時、プルリクの作成・更新時、リリース時に動作する。
 
 name: Docker Publish
 
 on:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+    branches:
+      - main
+      - master
   release:
     types:
       - published
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: ghcr.io # DockerHubの際はこの行を削除
+  DOCKER_USERNAME: ${{ github.actor }}
+  DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
   PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
   publish:
     name: Push Docker image
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        target:
+          - '{ imageName: "XXXXX/XXXXX-a", directory: "a" }'
+          - '{ imageName: "XXXXX/XXXXX-b", directory: "b" }'
+          - '{ imageName: "XXXXX/XXXXX-c", directory: "c" }'
 
     steps:
       - name: Check out the repo
@@ -36,23 +53,24 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Login to ${{ env.REGISTRY }}
+        if: github.event_name != 'release'
         uses: docker/login-action@v2.0.0
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4.0.1
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ fromJson(matrix.target).imageName }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.1.1
         with:
-          context: .
-          push: true
+          context: ${{ fromJson(matrix.target).directory }}
+          push: ${{ github.event_name != 'release' }}
           platforms: ${{ env.PLATFORMS }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
