--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -1,14 +1,25 @@
-# GitHub Packages に Docker image を公開する。（Release イベント駆動）
+# 任意のレジストリに Docker image を公開orビルドする。
+# master/mainのプッシュ時、プルリクの作成・更新時、リリース時に動作する。
 
 name: Docker Publish
 
 on:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+    branches:
+      - main
+      - master
   release:
     types:
       - published
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: ghcr.io # DockerHubの際はこの行を削除
+  DOCKER_USERNAME: ${{ github.actor }}
+  DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
   IMAGE_NAME: ${{ github.repository }}
   PLATFORMS: linux/amd64,linux/arm64
 
@@ -36,11 +47,12 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Login to ${{ env.REGISTRY }}
+        if: github.event_name != 'release'
         uses: docker/login-action@v2.0.0
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -52,7 +64,7 @@ jobs:
         uses: docker/build-push-action@v3.1.1
         with:
           context: .
-          push: true
+          push: ${{ github.event_name != 'release' }}
           platforms: ${{ env.PLATFORMS }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
