--- a/workflows/docker-multi.yml
+++ b/workflows/docker-multi.yml
@@ -65,6 +65,13 @@ jobs:
         uses: docker/metadata-action@v4.0.1
         with:
           images: ${{ fromJson(matrix.target).imageName }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.1.1
