--- a/workflows/docker-multi.yml
+++ b/workflows/docker-multi.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   job:
-    name: Push Docker image
+    name: Docker build (${{ fromJson(matrix.target).directory }})
     runs-on: ubuntu-latest
 
     strategy:
