--- a/workflows/docker-multi.yml
+++ b/workflows/docker-multi.yml
@@ -44,14 +44,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ fromJson(matrix.target).directory }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-${{ fromJson(matrix.target).directory }}-
-
       - name: Login to ${{ env.REGISTRY }}
         if: github.event_name != 'release'
         uses: docker/login-action@v2.0.0
@@ -81,10 +73,5 @@ jobs:
           platforms: ${{ env.PLATFORMS }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
