--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -18,6 +18,14 @@ jobs:
           rm -v .github/workflows/*
           cp -v workflows/* .github/workflows/
 
-      - uses: reviewdog/action-actionlint@v1
+      - name: Run ationlint (Push)
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
+          ./actionlint -color
+
+      - name: Run actionlint (Pull-request)
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: reviewdog/action-actionlint@v1
         with:
           fail_on_error: true
