--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -18,8 +18,7 @@ jobs:
           rm -v .github/workflows/*
           cp -v workflows/* .github/workflows/
 
-      - name: Run ationlint (Push)
-        if: ${{ github.event_name == 'push' }}
+      - name: Run ationlint
         run: |
           bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
           ./actionlint -color
