--- a/workflows/docker-multi.yml
+++ b/workflows/docker-multi.yml
@@ -60,8 +60,8 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern=v{{version}}
+            type=semver,pattern=v{{major}}.{{minor}}
             type=sha
             type=raw,value=latest,enable={{is_default_branch}}
 
