--- a/workflows/docker-multi.yml
+++ b/workflows/docker-multi.yml
@@ -56,7 +56,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4.0.1
         with:
-          images: ${{ env.REGISTRY }}/${{ fromJson(matrix.target).imageName }}
+          images: ${{ fromJson(matrix.target).imageName }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
