--- a/workflows/nodejs-multi-ci.yml
+++ b/workflows/nodejs-multi-ci.yml
@@ -50,13 +50,13 @@ jobs:
           echo "lint: $lint"
           echo "test: $test"
 
-          echo {
-            "compile=$compile"
-            "build=$build"
-            "generate=$generate"
-            "package=$package"
-            "lint=$lint"
-            "test=$test"
+          echo { \
+            "compile=$compile" \
+            "build=$build" \
+            "generate=$generate" \
+            "package=$package" \
+            "lint=$lint" \
+            "test=$test" \
           } >> $GITHUB_OUTPUT
 
       - name: 🛠 Get yarn cache directory path
