--- a/workflows/nodejs-ci.yml
+++ b/workflows/nodejs-ci.yml
@@ -48,11 +48,17 @@ jobs:
           echo "lint: $lint"
           echo "test: $test"
 
+          # shellcheck disable=SC2086,SC2129
           echo "compile=$compile" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
           echo "build=$build" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
           echo "generate=$generate" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
           echo "package=$package" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
           echo "lint=$lint" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
           echo "test=$test" >> $GITHUB_OUTPUT
 
       - name: 🛠 Get yarn cache directory path
