--- a/workflows/nodejs-multi-ci.yml
+++ b/workflows/nodejs-multi-ci.yml
@@ -49,16 +49,24 @@ jobs:
           echo "lint: $lint"
           echo "test: $test"
 
-          echo "::set-output name=compile::$compile"
-          echo "::set-output name=build::$build"
-          echo "::set-output name=generate::$generate"
-          echo "::set-output name=package::$package"
-          echo "::set-output name=lint::$lint"
-          echo "::set-output name=test::$test"
+          # shellcheck disable=SC2086,SC2129
+          echo "compile=$compile" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
+          echo "build=$build" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
+          echo "generate=$generate" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
+          echo "package=$package" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
+          echo "lint=$lint" >> $GITHUB_OUTPUT
+          # shellcheck disable=SC2086,SC2129
+          echo "test=$test" >> $GITHUB_OUTPUT
 
       - name: 🛠 Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+        run: |
+          # shellcheck disable=SC2086
+          echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
 
       - name: 📦 Cache node_modules
         uses: actions/cache@v3
@@ -108,7 +116,8 @@ jobs:
         id: check-dist
         working-directory: ${{ matrix.directory }}
         run: |
-          echo "::set-output name=exists::$(test -d dist && echo true || echo false)"
+          # shellcheck disable=SC2086
+          echo "exists=$(test -d dist && echo true || echo false)" >> $GITHUB_OUTPUT
 
       - name: 📦 Upload artifact
         if: steps.check-dist.outputs.exists == 'true'
