--- a/workflows/actionlint.yml
+++ b/workflows/actionlint.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Run ationlint (Push)
         if: ${{ github.event_name == 'push' }}
