--- a/workflows/maven-ci.yml
+++ b/workflows/maven-ci.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
