--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -31,6 +31,7 @@ jobs:
     strategy:
       matrix:
         file: ${{ fromJson(needs.list-files.outputs.files) }}
+      fail-fast: false
 
     steps:
       - name: 🛎 Checkout
