fix: fast-fast を off にする

--- a/workflows/nodejs-multi-ci.yml
+++ b/workflows/nodejs-multi-ci.yml
@@ -21,6 +21,7 @@ jobs:
         os: [ubuntu-latest]
         node: [16]
         directory: [AAAAA, BBBBB]
+      fail-fast: false
 
     steps:
       - name: 🛎 Checkout
