--- a/workflows/maven-ci.yml
+++ b/workflows/maven-ci.yml
@@ -15,6 +15,7 @@ jobs:
         os: [ubuntu-latest]
         java: [17]
         distribution: [adopt]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v3
