fix: アクションの動作条件追加

--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -2,6 +2,11 @@ name: hadolint
 
 on:
   pull_request:
+    branches:
+      - main
+      - master
+    paths:
+      - "dockerfiles/**"
 
 jobs:
   list-files:
