--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -6,6 +6,11 @@ on:
       - main
       - master
   pull_request:
+    branches:
+      - main
+      - master
+    paths:
+      - "workflows/**"
 
 jobs:
   actionlint:
