--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -247,6 +247,9 @@ jobs:
       - build
       - merge-latest
 
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+
     steps:
       - name: Create Release
         id: create_release
