--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -24,10 +24,20 @@ on:
       - closed
 
 env:
+  # イメージをアップロードするレジストリ
   REGISTRY: ghcr.io
+  # レジストリのログインユーザー名
   DOCKER_USERNAME: ${{ github.actor }}
+  # レジストリのログインパスワード
   DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+  # ビルドするプラットフォーム
   PLATFORMS: linux/amd64,linux/arm64
+  # ビルド対象情報の情報
+  TARGETS: >-
+    [
+      { imageName: "tomacheese/my-pixiv", dir: ".", file: "view.Dockerfile", packageName: "my-pixiv" },
+      { imageName: "tomacheese/my-pixiv-api", dir: ".", file: "api.Dockerfile", packageName: "my-pixiv-api" }
+    ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.merged == true && 'master' || github.event.pull_request.head.sha }}
@@ -47,6 +57,8 @@ jobs:
       platform-matrix: ${{ steps.platform-matrix.outputs.matrix }}
       # latestタグへのマージが必要かどうか (複数のプラットフォームがある時は必要)
       need-merge: ${{ steps.platform-matrix.outputs.need-merge }}
+      # ビルド対象情報のマトリクス
+      targets-matrix: ${{ steps.targets-matrix.outputs.matrix }}
 
     steps:
       - name: Check out the repo
@@ -73,9 +85,18 @@ jobs:
           # ,があるときはneed-merge=true
           echo "need-merge=$(echo "$PLATFORMS" | grep -q ',' && echo true || echo false)" >> $GITHUB_OUTPUT
 
+      - name: Set targets matrix
+        id: targets-matrix
+        uses: actions/github-script@v6
+        with:
+          script: |
+            core.setOutput('matrix', process.env.TARGETS)
+        env:
+          TARGETS: ${{ env.TARGETS }}
+
   # Dockerイメージをビルドする
   build:
-    name: Docker build (${{ fromJson(matrix.target).file }}, ${{ matrix.platform }})
+    name: Docker build (${{ matrix.target.file }}, ${{ matrix.platform }})
     runs-on: ubuntu-latest
     needs: calc-version
 
@@ -83,11 +104,9 @@ jobs:
       fail-fast: false
       matrix:
         # ビルドするプラットフォーム
-        platform: ${{ fromJson(needs.calc-version.outputs.platform-matrix) }}
+        platform: ${{ fromJSON(needs.calc-version.outputs.platform-matrix) }}
         # ビルドするDockerfile
-        target:
-          - '{ imageName: "tomacheese/my-pixiv", file: "view.Dockerfile", packageName: "my-pixiv" }'
-          - '{ imageName: "tomacheese/my-pixiv-api", file: "api.Dockerfile", packageName: "my-pixiv-api" }'
+        target: ${{ fromJSON(needs.calc-version.outputs.platform-matrix) }}
 
     steps:
       - name: Remove platform prefix
@@ -102,8 +121,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ needs.calc-version.outputs.tag }}
-          environment: '${{ fromJson(matrix.target).packageName }}:${{ steps.platform.outputs.shortPlatform }}'
-          environment-url: https://github.com/${{ github.repository }}/pkgs/container/${{ fromJson(matrix.target).packageName }}
+          environment: '${{ matrix.target.packageName }}:${{ steps.platform.outputs.shortPlatform }}'
+          environment-url: https://github.com/${{ github.repository }}/pkgs/container/${{ matrix.target.packageName }}
 
       - name: Update deployment status (in_progress)
         uses: chrnorm/deployment-status@v2.0.1
@@ -135,14 +154,13 @@ jobs:
 
       - name: package.json update version
         run: |
-          sed -r -i "1,/version/s/\"version\": \".+\"/\"version\": \"${{ needs.calc-version.outputs.tag }}\"/" view/package.json
-          sed -r -i "1,/version/s/\"version\": \".+\"/\"version\": \"${{ needs.calc-version.outputs.tag }}\"/" api/package.json
+          find . -type d -name node_modules -prune -o -type f -name package.json -exec sed -r -i "1,/version/s/\"version\": \".+\"/\"version\": \"${{ needs.calc-version.outputs.tag }}\"/" {} \;
           git diff
 
       - name: Set tag suffix value
         id: tag
         run: |
-          if [ "${{ fromJson(needs.calc-version.outputs.need-merge) }}" = "true" ]; then
+          if [ "${{ needs.calc-version.outputs.need-merge }}" = "true" ]; then
             echo "suffix=-${{ steps.platform.outputs.shortPlatform }}" >> $GITHUB_OUTPUT
           else
             echo "suffix=" >> $GITHUB_OUTPUT
@@ -152,7 +170,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4.3.0
         with:
-          images: ${{ env.REGISTRY }}/${{ fromJson(matrix.target).imageName }}
+          images: ${{ env.REGISTRY }}/${{ matrix.target.imageName }}
           tags: |
             # need-mergeがtrueの時はshortPlatformを含める (latest-arm64)
             # need-mergeがfalseの時はshortPlatformを含めない (latest)
@@ -162,14 +180,14 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.3.0
         with:
-          context: .
-          file: ${{ fromJson(matrix.target).file }}
+          context: ${{ matrix.target.dir }}
+          file: ${{ matrix.target.file }}
           push: ${{ github.event.pull_request.merged == true }}
           platforms: ${{ matrix.platform }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ fromJson(matrix.target).packageName }}-${{ steps.platform.outputs.shortPlatform }}
-          cache-to: type=gha,mode=max,scope=${{ fromJson(matrix.target).packageName }}-${{ steps.platform.outputs.shortPlatform }}
+          cache-from: type=gha,scope=${{ matrix.target.packageName }}-${{ steps.platform.outputs.shortPlatform }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.target.packageName }}-${{ steps.platform.outputs.shortPlatform }}
           provenance: false
 
       - name: Update deployment status (success)
@@ -190,7 +208,7 @@ jobs:
 
   # 各プラットフォームのlatestからlatestタグにマージしてイメージを作成
   merge-latest:
-    name: Merge latest (${{ fromJson(matrix.target).file }})
+    name: Merge latest (${{ matrix.target.file }})
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     needs:
@@ -201,9 +219,7 @@ jobs:
       fail-fast: false
       matrix:
         # ビルドするDockerfile
-        target:
-          - '{ imageName: "tomacheese/my-pixiv", file: "view.Dockerfile", packageName: "my-pixiv" }'
-          - '{ imageName: "tomacheese/my-pixiv-api", file: "api.Dockerfile", packageName: "my-pixiv-api" }'
+        target: ${{ fromJSON(needs.calc-version.outputs.platform-matrix) }}
 
     steps:
       - name: Login to ${{ env.REGISTRY }}
@@ -218,14 +234,14 @@ jobs:
         id: extra-images
         run: |
           # linux/amd64,linux/arm64 -> ${{ env.REGISTRY }}/tomacheese/my-pixiv:latest-amd64,${{ env.REGISTRY }}/tomacheese/my-pixiv:latest-arm64
-          echo "images=$(echo "$PLATFORMS" | sed -r 's#([a-z]+)\/([a-z0-9]+)#${{ env.REGISTRY }}\/${{ fromJson(matrix.target).imageName }}:latest-\2#g')" >> $GITHUB_OUTPUT
+          echo "images=$(echo "$PLATFORMS" | sed -r 's#([a-z]+)\/([a-z0-9]+)#${{ env.REGISTRY }}\/${{ matrix.target.imageName }}:latest-\2#g')" >> $GITHUB_OUTPUT
 
       - name: Create and push manifest images (latest)
         uses: Noelware/docker-manifest-action@v0.2.3
         # プラットフォームがひとつの場合はマージ処理を行わない
         if: ${{ needs.calc-version.outputs.need-merge == 'true' }}
         with:
-          base-image: ${{ env.REGISTRY }}/${{ fromJson(matrix.target).imageName }}:latest
+          base-image: ${{ env.REGISTRY }}/${{ matrix.target.imageName }}:latest
           extra-images: ${{ steps.extra-images.outputs.images }}
           push: true
 
@@ -234,7 +250,7 @@ jobs:
         # プラットフォームがひとつの場合はマージ処理を行わない
         if: ${{ needs.calc-version.outputs.need-merge == 'true' }}
         with:
-          base-image: ${{ env.REGISTRY }}/${{ fromJson(matrix.target).imageName }}:${{ needs.calc-version.outputs.tag }}
+          base-image: ${{ env.REGISTRY }}/${{ matrix.target.imageName }}:${{ needs.calc-version.outputs.tag }}
           extra-images: ${{ steps.extra-images.outputs.images }}
           push: true
 
