--- a/workflows/nodejs-multi-ci.yml
+++ b/workflows/nodejs-multi-ci.yml
@@ -13,7 +13,7 @@ on:
       - master
 
 jobs:
-  ci:
+  node-ci:
     runs-on: ubuntu-latest
 
     strategy:
@@ -106,3 +106,13 @@ jobs:
         with:
           name: ${{ matrix.directory }}-dist
           path: ${{ matrix.directory }}/dist
+
+  finished-node-ci:
+    name: Check finished Node CI
+    runs-on: ubuntu-latest
+    needs:
+      - node-ci
+
+    steps:
+      - name: Check finished Node CI
+        run: echo ok
