Revert "feat: inputs.username, inputs.passwordを使うようにしてみる (#44)"
This reverts commit 78082e879e1f0b51567176716defa13f713bf560.

--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -3,30 +3,18 @@ name: Docker
 on:
   workflow_call:
     inputs:
-      targets:
-        description: "Docker targets"
-        required: true
-        type: string
       registry:
         description: "Docker registry"
         type: string
         default: ghcr.io
-      username:
-        description: "Docker registry username"
-        type: string
-        default: ${{ github.actor }}
-      password:
-        description: "Docker registry password"
-        type: string
-        default: ${{ github.token }}
-      is-mask-username:
-        description: "Either mask the username"
-        type: boolean
-        default: false
       platforms:
         description: "Docker platforms"
         type: string
         default: "linux/amd64,linux/arm64,linux/arm/v7"
+      targets:
+        description: "Docker targets"
+        required: true
+        type: string
       is-merged:
         description: "Is merged"
         type: boolean
@@ -35,6 +23,13 @@ on:
         description: "Pull request head SHA"
         type: string
         default: ${{ github.event.pull_request.head.sha }}
+    secrets:
+      DOCKER_PASSWORD:
+        description: "Docker registry username"
+        required: true
+      DOCKER_USERNAME:
+        description: "Docker registry password"
+        required: true
 
 jobs:
   # バージョンを計算する
@@ -63,13 +58,6 @@ jobs:
           # マージされていない時には github.event.pull_request.head.sha を使い、マージされた時にはmasterを使う
           ref: ${{ inputs.is-merged == true && 'master' || inputs.pr-head-sha }}
           fetch-depth: 0
-
-      - name: Mask password
-        run: echo "::add-mask::${{ inputs.password }}"
-
-      - name: Mask username
-        if: ${{ inputs.is-mask-username == true }}
-        run: echo "::add-mask::${{ inputs.username }}"
 
       - name: Bump version and push tag
         id: tag-version
