--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -35,3 +35,6 @@ jobs:
         [
           { imageName: "tomacheese/twitter-dm-memo", context: ".", file: "Dockerfile", packageName: "twitter-dm-memo" }
         ]
+    secrets:
+      DOCKER_USERNAME: ${{ github.actor }}
+      DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
