--- a/workflows/add-reviewer.yml
+++ b/workflows/add-reviewer.yml
@@ -11,26 +11,5 @@ on:
 
 jobs:
   add-reviewer:
-    runs-on: ubuntu-latest
-    if: >-
-      ${{
-        github.actor != 'dependabot[bot]' &&
-        github.actor != 'renovate[bot]' &&
-        github.actor != 'github-actions[bot]' &&
-        github.actor != 'book000'
-      }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Add reviewer
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            await github.rest.pulls.requestReviewers({
-              ...context.repo,
-              pull_number: context.issue.number,
-              reviewers: ["book000"]
-            })
+    name: Add reviewer
+    uses: book000/templates/.github/workflows/reusable-add-reviewer.yml@master
