--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -35,6 +35,7 @@ jobs:
         [
           { imageName: "tomacheese/twitter-dm-memo", context: ".", file: "Dockerfile", packageName: "twitter-dm-memo" }
         ]
+      platforms: linux/amd64,linux/arm64
     secrets:
       DOCKER_USERNAME: ${{ github.actor }}
       DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
